--- a/includes/_07_text.adoc
+++ b/includes/_07_text.adoc
@@ -219,9 +219,9 @@ Cherrytree's search and replace features can be found in the *Search* menu. <<fi
 . Click *Search*, shown in <<figure-7.10>>, and select one of the following options:
 +
 * *Find in Node Content* - Searches for a sequence of characters in the selected node's content.
-* *Find in All Nodes Contents* - Searches for a sequence of characters in the bodies of every node in the document.
+* *Find in All Nodes Contents* - Searches for a sequence of characters in the entire node tree.
 * *Find in Selected Node and Subnodes Contents* - Searches for a sequence of characters in the selected node and its {node-relations}[children].
-* *Find in Nodes Names and Tags* - Searches for a sequence of characters in the every node title and tag of the document.
+* *Find in Nodes Names and Tags* - Searches for a sequence of characters in the every node title and tag of the node tree.
 +
 NOTE: See *Tags for Searching* in link:#_creating_nodes[*6.1 Creating Nodes*] for more detail.
 
@@ -230,12 +230,35 @@ NOTE: See *Tags for Searching* in link:#_creating_nodes[*6.1 Creating Nodes*] fo
 +
 NOTE: *Find Again* and *Find Back* are only compatible with the *First From Selection* and *First in All Range* options, indicated in the next step.
 
-. (*Optional*) Select any of the *Search Options* that are applicable to your effort:
+. (*Optional*) Select any link:#_search_options[*Search Options*] that are applicable to your effort.
+. Enter characters that you desire to find into *Search For* and click *OK* to execute the search.
+
+==== Steps to Search and Replace
+
+[start=1]
+. Click *Search*, shown in <<figure-7.10>>, and select one of the following options:
 +
+* *Replace in Node Content* - Searches for a sequence of characters in the selected node's content and replaces them with the provided text.
+* *Replace in All Nodes Contents* - Searches for a sequence of characters in the entire node tree and replaces them with the provided text.
+* *Replace in Selected Node and Subnodes Contents* - Searches for a sequence of characters in the selected node and its {node-relations}[children], and replaces them with the provided text.
+* *Replace in Nodes Names and Tags* - Searches for a sequence of characters in the every node title and tag of the node tree, and replaces them with the provided tet..
++
+NOTE: See *Tags for Searching* in link:#_creating_nodes[*6.1 Creating Nodes*] for more detail.
+
+* *Replace Again* - Find the next instance in the search results and replace it with the provided text.  
++
+NOTE: *Replace Again* is only compatible with the *First From Selection* and *First in All Range* options, indicated in the next step.
+
+. (*Optional*) Select any link:#_search_options[*Search Options*] that are applicable to your effort.
+. Enter characters to find into *Search For* and characters to replace in *Replace With*. 
+. Click *OK* to execute the search.
+
+==== Search Options
+
 [[figure-7.11]]
 .Figure 7.11 
 {search-menu2}
-+
+
 * *Match Case* - Filter results that do not match the {letter-case}[letter case] of the provided search term.
 * *Whole Word* - Filter results that contain more characters than provided. For example, a whole-word search for `and` will return any instances of the word `and` but not other words containing `and` such as `Andrew`. 
 * *Regular Expression* - Search for patterns in text. For example, `\([0-9][0-9][0-9]\) [0-9][0-9][0-9]-[0-9][0-9][0-9][0-9]` would return instances of text formatted as (_xxx_) _xxx_-_xxxx_, such as phone numbers, where _x_ can be any number between 0 and 9. 
@@ -257,26 +280,16 @@ NOTE: Learn more about regular expressions {regex-link}[here].
 ** *Close* - Closes the *Iterate Latest Find/Replace* menu.
 ** *Find Previous* - Find the previous instance of the searched term.
 ** *Find Next* - Find the next instance of the searched term.
-** *Replace* - Replace the current instance of the of the searched term with the replacement. (Applicable only to link:#_search_and_replace[Search and Replace] features.)
+** *Replace* - Replace the current instance of the of the searched term with the replacement provided in *Step 3* of link:#_steps_to_search_and_replace[*Steps to Search and Replace*]. (Applicable only to link:#_search_and_replace[Search and Replace] features.)
 ** *Undo* - Undoes the more recent *Replace* execution.
 
-. (*Optional*) *Time Filter* options will be available when searching across multiple nodes. Select any option(s) that correspond with your effort, and click the adjacent date(s) to edit its value:
-+
+*Time Filter* options will be available when searching across multiple nodes. Select any option(s) that correspond with your effort, and click the adjacent date(s) to edit its value:
+
 [[figure-7.13]]
 .Figure 7.13
 {search-menu3}
-+
+
 * *Node Created After* - Only show results from nodes created after the provided date.
 * *Node Created Before* - Only show results from nodes created before the provided date.
 * *Node Modified After* - Only show results from nodes that have been edited after the provided date.
 * *Node Modified Before* - Only show results from nodes that have been edited before the provided date.
-
-. Click *OK* to execute the search.
-
-==== Search and Replace
-
-* *Replace in Node Content* -
-* *Replace in All Nodes Contents* -
-* *Replace in Selected Node and Subnodes Contents* -
-* *Replace in Nodes Names and Tags* -
-* *Replace Again* -
