--- a/includes/__variables.adoc
+++ b/includes/__variables.adoc
@@ -113,6 +113,13 @@
 :search-menu3: image:images/search-menu3.png[Third search menu.]
 :iterate-search: image:images/iterate-search.png[Iterate search menu.]
 
+// Objects
+:img-props: image:images/img-props.png[Image properties interface.]
+:edit-image: image:images/edit-image.png[Edit image menu.]
+:insert-table: image:images/insert-table.png[Insert table option menu.]
+:edit-table: image:images/edit-table.png[Edit table menu.]
+:table-column: image:images/table-column.png[Table column menu.]
+
 // Settings Images
 :pref01: image:images/pref01.png[Text and Code.]
 :pref02: image:images/pref02.png[Text.]
