--- a/includes/_01_introduction.adoc
+++ b/includes/_01_introduction.adoc
@@ -2,7 +2,7 @@
 
 Cherrytree is a free and open source, hierarchical, note-taking application. It can store text, images, files, links, tables, and executable snippets of code. This application is under active development. Details regarding updates can be found in the {changelog}[changelog].
 
-If you have questions please ask in the {forum}[forum], or visit {feedback}[feedback webpage] to provide feedback.
+If you have questions please ask in the {forum}[forum]. To provide feedback please visit the {feedback}[feedback webpage].
 
 === About This Manual
 
@@ -15,8 +15,6 @@ New contributors are welcome! We recommend that you {maintainer}[contact the pro
 ==== Development
 
 Please visit the git {repository}[repository] to get started.
-
-
 
 Development is currently focused on porting from Python to C++/GTKmm. These changes are located on the master branch within the {future}[future directory]. The latest, stable release can also be found on the master branch. The pygi branch is a discontinued attempt to port to the python bindings for GTK3. It failed due to missing pygi bindings for a core clipboard functionality
 
